@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1288 2017/12/14 13:52:58 adam Exp $
+# $NetBSD: Makefile,v 1.1289 2017/12/21 03:47:24 manu Exp $
 #
 
 COMMENT=	Packages related to the World Wide Web
@@ -43,6 +43,7 @@ SUBDIR+=	ap2-python
 SUBDIR+=	ap2-subversion
 SUBDIR+=	ap2-suphp
 SUBDIR+=	ap2-transform
+SUBDIR+=	ap2-upload
 SUBDIR+=	ap2-xsendfile
 SUBDIR+=	ap22-authn-sasl
 SUBDIR+=	ap22-authnz-external
