@@ -1,0 +1,3 @@
+@comment $NetBSD: PLIST,v 1.1 2017/12/21 03:47:25 manu Exp $
+lib/httpd/mod_upload.so
+${DOC_DIR}/README
