@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2017,v 1.5340 2017/12/20 22:41:34 wiz Exp $
+$NetBSD: CHANGES-2017,v 1.5341 2017/12/21 03:47:24 manu Exp $
 
 Changes to the packages collection and infrastructure in 2017:
 
@@ -7708,3 +7708,4 @@ Changes to the packages collection and infrastructure in 2017:
 	Updated databases/pgbouncer to 1.8.1 [fhajny 2017-12-20]
 	Updated x11/modular-xorg-server to 1.19.6 [wiz 2017-12-20]
 	Updated x11/modular-xorg-xephyr to 1.19.6 [wiz 2017-12-20]
+	Added www/ap2-upload 0.7 [manu 2017-12-21]
